Project done (at least, before I find some hiding bug)

--- a/login-laravel/.env.example
+++ b/login-laravel/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME="SolarView Login"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:gmALUB/7PxRfjCXyf7eDRexgttn34nTdBBKYfgDIa74=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=solarview-login-mysql
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=solarview-login-db
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=admin123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -24,17 +24,17 @@ SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=solarview-login-redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=davi.mendes.dev@gmail.com
+MAIL_PASSWORD=tynhzgplhlkruibz
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="noreply@solarview-login.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
