--- a/login-react/package.json
+++ b/login-react/package.json
@@ -6,8 +6,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "@date-io/moment": "^2.16.1",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/icons-material": "^5.10.15",
+    "@mui/material": "^5.10.15",
+    "@mui/x-date-pickers": "^5.0.8",
+    "axios": "^1.2.0",
+    "dayjs": "^1.11.6",
+    "moment": "^2.29.4",
     "next": "latest",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0"
   }
 }
