--- a/login-laravel/.env.example
+++ b/login-laravel/.env.example
@@ -31,10 +31,10 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=davi.mendes.dev@gmail.com
-MAIL_PASSWORD=tynhzgplhlkruibz
+MAIL_USERNAME=my.email@mycompany.com
+MAIL_PASSWORD=my-pass
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS="noreply@solarview-login.com"
+MAIL_FROM_ADDRESS="noreply@mycompany.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
